--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio for Software engineer Juyeon" />
     <meta name="author" content="Juyeon" />
-    <title>Juyeon Portfolio</title>
+    <title>inCircle</title>
     <script
       src="https://kit.fontawesome.com/a8d1dbcb7c.js"
       crossorigin="anonymous"
@@ -20,100 +20,47 @@
   <body>
     <!-- Navigation -->
     <nav>
-      <div class="logo"><i class="fas fa-cat"></i></div>
+      <div class="logo">
+        <img src="images\ci.png" alt="">
+        <div class="menu">
+          <div class="item">TOP</div>
+          <div class="item">会社概要</div>
+          <div class="item">施工一覧</div>
+          <div class="item">お問合せ</div>
+        </div>
+      </div>
     </nav>
     <!-- Home -->
     <div id="home">
-      <h1 class="home__title">Juyeon</h1>
-      <h2 class="home__subtitle">
-        I'm a Software Engineer living in Seoul,
-      </h2>
-      <h2 class="home__subtitle2">South Korea</h2>
-      <!-- <img src="images/Busc11.gif" class="home__img-dancer" alt=""> -->
+      <img src="images\main.png" alt="">
     </div>
     <!-- Works -->
     <div id="works">
-      <h1 class="works__title">Selected Works.</h1>
-      <div class="works__container">
+      <h1 class="works__title">
+        会社概要
+      </h1>
+      <div class="introduce">
+        <div>会社名　　株式会社インサークル（Corporation Incircle）</div>
+        <div>設立　　　2016 年（平成 28 年）6 月 1 日</div>  
+        <div>所在地　　〒120-0001　東京都足立区大谷田 4-14-6</div>  
+        <div>TEL　　　 03-5616-6438</div> 
+        <div>FAX　　　 03-6802-5144</div>  
+        <div>資本金　　3,000,000 円</div>
+        <div>代表　　　丸山　伸晃</div>  
+        <div>内装、リフォーム業</div>
+        <div>新築・ 一般リフォーム、　　クロス、床、ダイノックシート、貼り施工</div>
+        <div>店舗：美容室等</div>
+        <div>展示会等</div>
         <div class="work-left rellax" data-rellax-speed="1"></div>
         <div class="work-right rellax" data-rellax-speed="1"></div>
       </div>
-    </div>
-    <!-- Details -->
-    <div id="details">
-      <h1 class="details__title">Some details.</h1>
-      <!-- <div class="details__left rellax" data-rellax-speed="-1.5">
-        <img src="images/profile/left.JPG" alt="" />
-      </div> -->
-      <div class="details__right rellax" data-rellax-speed="1.5">
-        <img src="images/profile/right.PNG" alt="" />
       </div>
-      <div class="details_description">
-        <ul>
-          My values :
-          <li>Planning</li>
-          <li>Reusability</li>
-          <li>Efficiency</li>
-          <li>Responsibility</li>
-        </ul>
-        <ul>
-          Likes :
-          <li>Web technology</li>
-          <li>New tools</li>
-          <li>Art & Design</li>
-          <li>Video Games</li>
-        </ul>
-      </div>
+      <div class="works__container">
+        
     </div>
-
-    <!-- Skills -->
-    <div id="skills">
-      <h1 class="skills__title">Skills.</h1>
-      <div class="skills__container">
-        <div class="skills__background">
-          <span class="skills-skills">
-            Skills<br /><br />
-            HTML<br />
-            CSS<br />
-            JavaScript<br />
-            React<br />
-            NodeJS<br />
-            Express<br />
-            MongoDB
-          </span>
-          <span class="skills-tools">
-            Tools<br /><br />
-            Visual Studio Code<br />
-            Figma<br />
-            Unity 3D<br />
-            Adobe Photoshop<br />
-            Adobe Illustrator<br />
-            Adobe Premire Pro<br />
-          </span>
-          <span class="skills-tools">
-            Etc<br /><br />
-            Git<br />
-            Notion<br />
-            Dance<br />
-          </span>
-        </div>
-      </div>
-    </div>
-    <!-- Contact -->
-    <div id="contact">
-      <h1 class="contact__title">Contact.</h1>
-      <span>
-        <a href="https://github.com/mondrianDancer" target="blank">Github</a
-        ><br />
-        <div class="contact__email">mondrian.dance@gmail.com</div>
-        (↑Click to copy )<br />
-        <a href="#">Download my resume here.</a>
-      </span>
-    </div>
-
-    <!-- Arrow Up -->
+    <!-- Arrow Up
     <button class="arrow-up">
       <i class="fas fa-arrow-up"></i>
-    </button>
+    </button> -->
   </body>
 </html>
